@@ -271,7 +271,7 @@ class JEditor extends JObservable
 		jimport('joomla.filesystem.file');
 
 		// Build the path to the needed editor plugin
-		$name = JFilterInput::clean($this->_name, 'cmd');
+		$name = JFilterInput::getInstance()->clean($this->_name, 'cmd');
 		$path = JPATH_SITE.DS.'plugins/editors/'.$name.'.php';
 
 		if (!JFile::exists($path)) {
